---
source: tests/cli_help.rs
expression: stdout
---
Update to the latest release

Usage: distronomicon --app <APP> update

Options:
  -h, --help  Print help
